--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+wheel = "*"
 
 [packages]
 django = "*"
+ddjango_authorisation = {editable = true, path = "."}
 
 [requires]
 python_version = "3.7"
